chore: adjust to 1.20.3