@@ -15,6 +15,6 @@ public class ContainerSlots {
             containerSlots = containerSlots.stream().filter(slot -> slot.getClass().getSimpleName().equals("BackpackSlotItemHandler")).toList();
         }
         if (containerSlots.isEmpty()) return new SlotRange(0, 0);
-        return new SlotRange(containerSlots.getFirst().id, containerSlots.getLast().id);
+        return new SlotRange(containerSlots.get(0).id, containerSlots.get(containerSlots.size() - 1).id);
     }
 }
